# InvKinCalc

./: CMakeLists.txt  README.md
data/: test.root
files/: nuclear_masses.json
include/: global.hpp  simulation.hpp
input/: test_input.json
source/: simulation.cpp
tools/: make_mass_table.py
